--- a/slides/refs.bib
+++ b/slides/refs.bib
@@ -101,18 +101,21 @@
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2021},
+    year = {2022},
     url = {https://www.R-project.org/},
   }
 
 
-@Manual{R-tidyverse,
-  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
-  author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.1},
-  url = {https://CRAN.R-project.org/package=tidyverse},
-}
+  @Article{R-tidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain Françoi and  Garrett Grolemun and  Alex Haye and  Lionel Henr and  Jim Heste and  Max Kuh and  Thomas Lin Pederse and  Evan Mille and  Stephan Milton Bach and  Kirill Müll and , Jeroen Oo and , David Robins and , Dana Paige Seid and , Vitalie Spi and , Kohske Takahas and , Davis Vaugh and , Claus Wil and , Kara W and , Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
 
 @Manual{R-here,
     title = {here: A Simpler Way to Find Your Files},
@@ -329,15 +332,23 @@
     url = {https://CRAN.R-project.org/package=rvest},
   }
   
-  @Book{bookdown,
+  @Book{bookdownbook,
     title = {bookdown: Authoring Books and Technical Documents with {R} Markdown},
     author = {Yihui Xie},
     publisher = {Chapman and Hall/CRC},
     address = {Boca Raton, Florida},
     year = {2016},
     note = {ISBN 978-1138700109},
+    url = {https://bookdown.org/yihui/bookdown},
+  }
+  @Manual{bookdown,
+    title = {bookdown: Authoring Books and Technical Documents with R Markdown},
+    author = {Yihui Xie},
+    year = {2023},
+    note = {R package version 0.32},
     url = {https://github.com/rstudio/bookdown},
   }
+  
   @ARTICLE{Wilkinson2016-pu,
   title    = "The {FAIR} Guiding Principles for scientific data management and
               stewardship",
